--- a/Spa/src/app/main-nav/main-nav.component.html
+++ b/Spa/src/app/main-nav/main-nav.component.html
@@ -3,7 +3,7 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="!(isHandset$ | async)">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>Main Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="#">Link 1</a>
       <a mat-list-item href="#">Link 2</a>
@@ -20,15 +20,15 @@
         <!-- *ngIf="isHandset$ | async"
         this if we can add to the button to hide and show base on expand -->
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>Spa</span>
+      </button>   
+      <span class="Title">School Corss</span>
     </mat-toolbar>
-<!--     <div style="text-align:center">
+    <div style="text-align:center">
       <h1>
         Welcome to Spa!
       </h1>
     </div>
-    <h2>Here are some links to help you start: </h2> -->
+    <h2>Here are some links to help you start: </h2>
     <!-- Add Content Here -->
   </mat-sidenav-content>
 </mat-sidenav-container>
