--- a/Spa/src/app/main-nav/main-nav.component.scss
+++ b/Spa/src/app/main-nav/main-nav.component.scss
@@ -1,5 +1,5 @@
 .sidenav-container {
-  height: 5%;
+  height: 100%;
 }
 
 .sidenav {
@@ -7,11 +7,14 @@
 }
 
 .sidenav .mat-toolbar {
-  background: inherit;
+  background: MediumTurquoise;
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+.Title{
+  margin: auto;
 }
