--- a/Spa/src/app/app.component.html
+++ b/Spa/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- The content below is only a placeholder and can be replaced. -->
-<app-main-nav></app-main-nav>
+<app-main></app-main>
 
 <router-outlet></router-outlet>
