--- a/Spa/src/app/main/main.component.html
+++ b/Spa/src/app/main/main.component.html
@@ -54,12 +54,9 @@
 
       </div>
     </mat-toolbar>
-    <div style="text-align:center">
-      <h1>
-        Welcome to Spa!
-      </h1>
-    </div>
-    <h2>Here are some links to help you start: </h2>
+    
+    <router-outlet></router-outlet>
+    
     <!-- Add Content Here -->
   </mat-sidenav-content>
 </mat-sidenav-container>
