--- a/Spa/src/app/main/main.component.html
+++ b/Spa/src/app/main/main.component.html
@@ -1,13 +1,15 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport="true" [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    <mat-sidenav #drawer class="sidenav"
+    fixedInViewport="true" 
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="!(isHandset$ | async)">
-    <mat-toolbar>Main Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
+     <mat-toolbar>Main Menu</mat-toolbar>
+     <mat-nav-list>
+       <a mat-list-item href="#">Link 1</a>
+       <a mat-list-item href="#">Link 2</a>
+       <a mat-list-item href="#">Link 3</a>
+     </mat-nav-list>
+   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
@@ -28,7 +30,8 @@
                 <label for="userName">User ID:</label>
                 <div class="input-group">
                   <input id="userName" name="userName" class="form-control" required autofocus="autofocus"
-                    (keydown.Tab)="stopPropagation($event)" />
+                    (keydown.Tab)="stopPropagation($event)" 
+                    [(ngModel)]="user.userName"/>
                   <span class="input-group-addon">
                     <i class="glyphicon glyphicon-envelope"></i>
                   </span>
@@ -37,7 +40,13 @@
               <div>
                 <label for="password">Password:</label>
                 <div class="input-group">
-                  <input id="password" name="password" class="form-control" required type="password" (keydown.Tab)="stopPropagation($event)" />
+                  <input id="password" 
+                  name="password" 
+                  class="form-control" 
+                  required 
+                  type="password" 
+                  (keydown.Tab)="stopPropagation($event)" 
+                  [(ngModel)]="user.password"/>
                   <span class="input-group-addon">
                     <i class="glyphicon glyphicon-lock"></i>
                   </span>
@@ -45,7 +54,7 @@
               </div>
             </div>
             <div>
-              <button mat-stroked-button class="childloginButton">
+              <button mat-stroked-button class="childloginButton" (click)="login()">
                 Login
               </button>
             </div>
