--- a/Spa/src/app/main/dashboard/dashboard.component.html
+++ b/Spa/src/app/main/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center">
   <h1>
-    Welcome to Spa!
+    Welcome to School Cross
   </h1>
 </div>
 <h2>Here are some links to help you start: </h2>
