--- a/Spa/src/app/main/main.component.html
+++ b/Spa/src/app/main/main.component.html
@@ -42,7 +42,7 @@
                 <div class="input-group">
                   <input id="userName" name="userName" class="form-control" required autofocus="autofocus"
                     (keydown.Tab)="stopPropagation($event)" 
-                    [(ngModel)]="user.userName"/>
+                    [(ngModel)]="user.userId"/>
                   <span class="input-group-addon">
                     <i class="glyphicon glyphicon-envelope"></i>
                   </span>
